--- a/src/scss/imports/core/_variables.scss
+++ b/src/scss/imports/core/_variables.scss
@@ -48,6 +48,8 @@ $tech-cl: #ffa500;
     --btnMode-cl: #9848f6;
     --btnTop-cl: #ffffff;
     --commentbg-cl: #f0f2f5;
+    --bgloading-cl: rgba(255, 255, 255, 0.4);
+    --borderbt-cl: rgba(0, 0, 0, 0.05);
 }
 .darkmode {
     --text-cl: #e4e6eb;
@@ -58,6 +60,8 @@ $tech-cl: #ffa500;
     --btnMode-cl: #ffffff;
     --btnTop-cl: #000000;
     --commentbg-cl: #3a3b3c;
+    --bgloading-cl: rgba(0, 0, 0, 0.4);
+    --borderbt-cl: #a7a7a7;
 }
 $text-cl: var(--text-cl);
 $subtext-cl: var(--subtext-cl);
@@ -67,6 +71,8 @@ $socialIconBorder-cl: var(--socialIconBorder-cl);
 $btnMode-cl: var(--btnMode-cl);
 $btnTop-cl: var(--btnTop-cl);
 $commentbg-cl: var(--commentbg-cl);
+$bgloading-cl: var(--bgloading-cl);
+$borderbt-cl: var(--borderbt-cl);
 $hover-cl: #9848f6;
 
 $pd-section: 15px;
